
[TestGHOpen_DefaultTemplate - 1]
🚀 Release api v2.0.0
---

[TestGHOpen_DefaultTemplate - 2]
This PR was automatically generated for **api**.

## 📦 What happens when you merge?
- Version bumped to **2.0.0**
- Changelog updated
- Changesets consumed
- Publish workflow creates GitHub release: `api@2.0.0`

---

[TestGHOpen_CreateNewPR - 1]
This PR was automatically generated for **auth**.

## 📦 What happens when you merge?
- Version bumped to **1.0.0**
- Changelog updated
- Changesets consumed
- Publish workflow creates GitHub release: `auth@1.0.0`

---
